--- a/src/HomePage/NewsSection/NewsSection.scss
+++ b/src/HomePage/NewsSection/NewsSection.scss
@@ -2,16 +2,17 @@
 
 .news-container {
   @include container;
-  margin-block: 4%;
+  margin-block: clamp(4rem, 5%, 5%);
 
   .news-header-container {
     @include flex-between;
-    font-size: 0.8rem;
     padding-bottom: 1%;
     h1 {
+      font-size: clamp(1.75rem, 1.75vw, 1.75vw);
       opacity: 0.8;
     }
     h2 {
+      font-size: clamp(1rem, 1.25vw, 1.25vw);
       opacity: 0.6;
     }
   }
@@ -19,7 +20,6 @@
   .articles-container {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     gap: 0.5rem;
 
     .article-container {
@@ -32,7 +32,7 @@
 
       p {
         width: 90%;
-        font-size: 1rem;
+        font-size: clamp(1rem, 1vw, 1vw);
         font-weight: bold;
         display: flex;
         margin: 0 auto;
@@ -42,8 +42,25 @@
     .grid-row-span-2 {
       grid-row: span 2;
       p {
-        font-size: 1.75rem;
+        font-size: clamp(1rem, 1.75vw, 1.75vw);
       }
     }
+  }
+}
+
+//===========================================================
+// Media Queries
+//===========================================================
+
+@media only screen and (max-width: 900px) {
+  .articles-container {
+    grid-template-columns: 1fr 1fr !important;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .articles-container {
+    grid-template-columns: 1fr !important;
+    gap: 1rem !important;
   }
 }
