finished content page

--- a/src/HomePage/NewsSection/NewsSection.scss
+++ b/src/HomePage/NewsSection/NewsSection.scss
@@ -28,7 +28,9 @@
       color: white;
       display: flex;
       align-items: flex-end;
-      padding-top: 35%;
+      height: 30vh;
+      background-position: center;
+      object-fit: cover;
 
       p {
         width: 90%;
@@ -41,6 +43,7 @@
     }
     .grid-row-span-2 {
       grid-row: span 2;
+      height: 61vh;
       p {
         font-size: clamp(1rem, 1.75vw, 1.75vw);
       }
@@ -62,5 +65,13 @@
   .articles-container {
     grid-template-columns: 1fr !important;
     gap: 1rem !important;
+
+    .article-container {
+      padding-top: 15rem;
+      height: 100%;
+    }
+    .grid-row-span-2 {
+      height: 100%;
+    }
   }
 }
