--- a/src/HomePage/SecondarySections/SecondarySections.scss
+++ b/src/HomePage/SecondarySections/SecondarySections.scss
@@ -18,6 +18,9 @@
     .article-container {
       img {
         width: 100%;
+        background-repeat: no-repeat;
+        height: 30vh;
+        object-fit: cover;
       }
       p {
         font-weight: bold;
