--- a/src/Content/Content.scss
+++ b/src/Content/Content.scss
@@ -9,27 +9,31 @@
 
   .left-content {
     h1 {
-      font-size: 1.75rem;
+      font-size: clamp(1.5rem, 1.8vw, 1.8vw);
       font-weight: bold;
       padding-bottom: 1.25rem;
     }
     h2 {
-      font-size: 1rem;
+      font-size: clamp(1rem, 1vw, 1vw);
       font-weight: 400;
     }
     h3 {
-      font-size: 1rem;
+      font-size: clamp(1rem, 1vw, 1vw);
       padding-bottom: 1.25rem;
     }
     img {
       width: 100%;
       padding-bottom: 1.25rem;
     }
+    p {
+      font-size: clamp(1rem, 1vw, 1vw);
+      line-height: 160%;
+    }
   }
   .right-content {
     p {
       padding-bottom: 2rem;
-      font-size: 1.5rem;
+      font-size: 1.5vw;
     }
     div {
       display: grid;
@@ -40,8 +44,22 @@
         width: 100%;
       }
       p {
-        font-size: 1rem;
+        font-size: 1vw;
       }
+    }
+  }
+}
+
+//===========================================================
+// Media Queries
+//===========================================================
+
+@media only screen and (max-width: 1300px) {
+  .content {
+    grid-template-columns: 1fr !important;
+
+    .right-content {
+      display: none;
     }
   }
 }
