--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -42,7 +42,6 @@
   }
 
   p {
-    font-size: 1vw;
     font-size: clamp(14px, 1vw, 1vw);
     font-weight: 900;
   }
@@ -57,7 +56,7 @@
   border-bottom: 0.5vh solid transparent;
   border-right: solid 0.1rem rgba(255, 255, 255, 0.8);
   cursor: pointer;
-  font-size: 0.8rem;
+  font-size: clamp(0.8rem, 0.85vw, 0.85vw);
   font-weight: bolder;
   display: flex;
   justify-content: center;
@@ -123,7 +122,7 @@
     form {
       input {
         border-radius: 2px;
-        font-size: 0.75rem;
+        font-size: clamp(0.75rem, 0.75vw, 0.75vw);
         font-weight: bold;
         padding: 2.5% 3%;
         outline: none;
@@ -155,6 +154,7 @@
 
     .bottom-header-more {
       font-size: 1.75rem;
+      font-size: clamp(1.75rem, 1.8vw, 1.8vw);
       font-weight: 600;
       width: 80%;
     }
@@ -163,6 +163,7 @@
 
       .bottom-header-tags {
         font-size: 0.9rem;
+        font-size: clamp(0.9rem, 0.95vw, 0.95vw);
         font-weight: bolder;
         width: 60%;
         padding: 0.25rem 0.5rem;
