--- a/src/HomePage/SecondarySections/SecondarySections.scss
+++ b/src/HomePage/SecondarySections/SecondarySections.scss
@@ -29,6 +29,40 @@
   }
 }
 
+.secondary-background {
+  background-color: blue;
+  margin-bottom: clamp(4rem, 5%, 5%);
+  padding-top: clamp(2rem, 2.5%, 2.5%);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: flex-end;
+  object-fit: cover;
+
+  .secondary-container {
+    padding-bottom: clamp(4rem, 4%, 4%);
+  }
+
+  h1 {
+    font-size: 2.5rem;
+    opacity: 1;
+    padding-bottom: 1.5rem;
+  }
+  .article-container {
+    background: white;
+    color: black;
+
+    p {
+      font-size: 1.15rem;
+      opacity: 0.8;
+      padding: 0.5rem;
+    }
+  }
+}
+
 //===========================================================
 // Media Queries
 //===========================================================
