--- a/src/HomePage/Weather/Weather.scss
+++ b/src/HomePage/Weather/Weather.scss
@@ -1,7 +1,7 @@
-@import "./../Shared.scss";
+@import "./../../Shared.scss";
 
 .weather {
-  padding-top: 4rem;
+  padding-bottom: clamp(4rem, 5%, 5%);
   @include container;
   h1 {
     font-size: clamp(1rem, 1.3vw, 1.3vw);
@@ -19,7 +19,7 @@
       .weather-left {
         padding-right: 0.5rem;
         img {
-          width: 4.5rem;
+          width: clamp(3rem, 4.75vw, 4.75vw);
         }
       }
       .weather-right {
@@ -37,5 +37,14 @@
         }
       }
     }
+  }
+}
+
+//===========================================================
+// Media Queries
+//===========================================================
+@media only screen and (max-width: 600px) {
+  .weather-container-hidden {
+    display: none !important;
   }
 }
