--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -134,6 +134,7 @@
     position: absolute;
     color: black;
     margin: 2.5% 0 0 80%;
+    cursor: pointer;
   }
 }
 //**********************************************************
@@ -145,7 +146,7 @@
   color: black;
   width: 100%;
   padding-block: 0.4%;
-  transition: 2s;
+  transition: 5s;
   position: relative;
 
   .header-bottom-container {
@@ -178,8 +179,8 @@
   }
 }
 .hidden-bottom-header {
-  margin-top: -10%;
-  transition: 2s;
+  margin-top: -100%;
+  transition: 5s;
 }
 .bottom-expand {
   display: none;
