--- a/src/Content/Content.scss
+++ b/src/Content/Content.scss
@@ -28,6 +28,7 @@
     p {
       font-size: clamp(1rem, 1vw, 1vw);
       line-height: 160%;
+      padding-bottom: 2%;
     }
   }
   .right-content {
@@ -36,6 +37,7 @@
       font-size: 1.5vw;
     }
     div {
+      cursor: pointer;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
@@ -44,7 +46,8 @@
         width: 100%;
       }
       p {
-        font-size: 1vw;
+        font-size: 0.8vw;
+        line-height: 150%;
       }
     }
   }
