--- a/src/HomePage/NewsSection/NewsSection.scss
+++ b/src/HomePage/NewsSection/NewsSection.scss
@@ -18,6 +18,7 @@
       height: 25vh;
       background-position: center;
       object-fit: cover;
+      cursor: pointer;
 
       p {
         width: 90%;
@@ -31,6 +32,7 @@
     .grid-row-span-2 {
       grid-row: span 2;
       height: 51vh;
+      cursor: pointer;
       p {
         font-size: clamp(1rem, 1.75vw, 1.75vw);
       }
