--- a/src/HomePage/SecondarySections/SecondarySections.scss
+++ b/src/HomePage/SecondarySections/SecondarySections.scss
@@ -8,6 +8,7 @@
     font-size: 1.75rem;
     opacity: 0.8;
     padding-bottom: 1%;
+    cursor: pointer;
   }
 
   .secondary-articles-container {
@@ -16,6 +17,7 @@
     gap: 2%;
 
     .article-container {
+      cursor: pointer;
       img {
         width: 100%;
         background-repeat: no-repeat;
