--- a/src/NewsFeed/NewsFeed.scss
+++ b/src/NewsFeed/NewsFeed.scss
@@ -1,6 +1,6 @@
 @import "./../Shared.scss";
 
-.articles-container {
+.newsFeed-container {
   @include container;
   padding-top: clamp(4rem, 5%, 5%);
 
@@ -11,6 +11,7 @@
     margin: 0 auto;
     width: 70%;
     padding-bottom: 2rem;
+    cursor: pointer;
     img {
       width: 100%;
       background-repeat: no-repeat;
