--- a/src/SharedComponents/Header/Header.scss
+++ b/src/SharedComponents/Header/Header.scss
@@ -6,6 +6,8 @@
   h1 {
     font-size: clamp(1.75rem, 1.75vw, 1.75vw);
     opacity: 0.8;
+    cursor: pointer;
+    text-transform: capitalize;
   }
   h2 {
     font-size: clamp(1rem, 1.25vw, 1.25vw);
