--- a/src/HomePage/SecondarySections/SecondarySections.scss
+++ b/src/HomePage/SecondarySections/SecondarySections.scss
@@ -9,6 +9,7 @@
     opacity: 0.8;
     padding-bottom: 1%;
     cursor: pointer;
+    text-transform: capitalize;
   }
 
   .secondary-articles-container {
